# bat-c

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md  bat.h  cbindgen.toml  renovate.json
.github/workflows/: examples.yml  release.yml  test.yml
examples/: README.md  basic.c  self_print.c
examples/C/: Makefile  README.md  basic.c  self_print.c
examples/D/: Makefile  README.md  basic.d  self_print.d
examples/Go/: Makefile  README.md  basic.go  self_print.go
examples/Julia/: README.md  basic.jl  self_print.jl
examples/Nim/: README.md  basic.nim  self_print.nim
examples/Odin/: Makefile  README.md  basic.odin  self_print.odin
examples/Python/: README.md  basic.py  self_print.py
examples/Ruby/: README.md  basic.rb  self_print.rb
examples/TypeScript/: README.md  basic.cc  basic.js  binding.gyp  package-lock.json  package.json  self_print.cc  self_print.js
examples/V/: README.md  basic.v  self_print.v  v.mod
examples/Zig/: README.md  basic.zig  bat_c.zig  build.zig  self_print.zig
src/: lib.rs
test/: expected_output.txt  test.bat  test.sh  test_input.html  test_input1.html  test_input2.html  test_pretty_print.c  test_print_pretty.c
