[package]
name = "bat-c"
version = "0.0.6"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
bat = { path = "bat", default-features = false, features = ["paging", "regex-onig"] }

# See https://github.com/sharkdp/bat/blob/master/Cargo.toml for features.

[profile.dev]
rpath = true

[profile.release]
lto = true
codegen-units = 1
rpath = true
