[package]
name = "bat-c"
version = "0.0.8"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
bat = { version = "0.25.0", default-features = false, features = [
  "paging",
  "regex-onig",
] }

[profile.dev]
rpath = true

[profile.release]
lto = "fat"
debug = false
strip = true
codegen-units = 1
rpath = true
