[package]
name = "bat-c"
version = "0.0.10"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
bat = { version = "0.26.1", default-features = false, features = [
  "paging",
  "regex-onig",
] }

[profile.dev]
rpath = true

[profile.release]
lto = "fat"
debug = false
strip = true
codegen-units = 1
rpath = true
